[package]
name = "foundry"
version = "0.0.0"
license = "AGPL-3.0"
authors = ["CodeChain Team <hi@codechain.io>"]
exclude = [
    "db/*",
    "docker/*",
    "docs/*",
    "keys/*",
    "scripts/*",
    "spec/*",
    "test/*",
]
edition = "2018"

[dependencies]
app_dirs = "^1.2.1"
clap = { version = "2", features = ["yaml"] }
codechain-vm = { path = "vm" }
ccore = { package = "codechain-core", path = "core" }
cdiscovery = { package = "codechain-discovery", path = "discovery" }
codechain-logger = { path = "util/logger" }
ckey = { package = "codechain-key", path = "key" }
ctypes = { package = "codechain-types", path = "types" }
ckeystore = { package = "codechain-keystore", path = "keystore" }
cnetwork = { package = "codechain-network", path = "network" }
crpc = { package = "codechain-rpc", path = "rpc" }
csync = { package = "codechain-sync", path = "sync" }
ctimer = { package = "codechain-timer", path = "util/timer" }
cmodule = { package = "codechain-module", path = "module" }
ctrlc = { git = "https://github.com/paritytech/rust-ctrlc.git" }
fdlimit = "0.1"
finally-block = "0.1"
futures = "0.1"
kvdb = "0.1"
kvdb-rocksdb = "0.1"
log = "0.4.6"
env_logger = "0.5.3"
never-type = "0.1.0"
panic_hook = { path = "util/panic_hook" }
parking_lot = "0.6.0"
primitives = { git = "https://github.com/CodeChain-io/rust-codechain-primitives.git", version = "0.4" }
rpassword = "2.0.0"
rustc-serialize = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio-core = "0.1.17"
toml = "0.4"
cidr = "0.0.4"

[build-dependencies]
vergen = "2"

[[bin]]
path = "foundry/main.rs"
name = "foundry"

[profile.release]
lto = true

[workspace]
members = [
    "core",
    "discovery",
    "json",
    "key",
    "keystore",
    "network",
    "rpc",
    "sync",
    "types",
    "vm",
    "module",
    "module-macros",
    "coordinator"
]
