[package]
name = "foundry"
version = "0.0.0"
license = "GPL-3.0"
authors = ["CodeChain Team <hi@codechain.io>"]
exclude = [
    "db/*",
    "docker/*",
    "docs/*",
    "keys/*",
    "scripts/*",
    "spec/*",
    "test/*",
]
edition = "2018"

[dependencies]
app_dirs = "^1.2.1"
clap = { version = "2", features = ["yaml"] }
coordinator = { path = "coordinator" }
ccore = { package = "codechain-core", path = "core" }
cdiscovery = { package = "codechain-discovery", path = "discovery" }
codechain-logger = { path = "util/logger" }
ckey = { package = "codechain-key", path = "key" }
cstate = { package = "codechain-state", path = "state" }
ctypes = { package = "codechain-types", path = "types" }
ckeystore = { package = "codechain-keystore", path = "keystore" }
cnetwork = { package = "codechain-network", path = "network" }
cinformer = {package = "codechain-informer", path = "informer"}
crpc = { package = "codechain-rpc", path = "rpc" }
csync = { package = "codechain-sync", path = "sync" }
ctimer = { package = "codechain-timer", path = "util/timer" }
cmodule = { package = "codechain-module", path = "module" }
ctrlc = { git = "https://github.com/paritytech/rust-ctrlc.git" }
crossbeam-channel = "0.4"
fdlimit = "0.1"
finally-block = "0.1"
futures = "0.1"
kvdb = "0.1"
kvdb-rocksdb = "0.1"
linkme = "0.2.2"
log = "0.4.6"
env_logger = "0.5.3"
never-type = "0.1.0"
panic_hook = { path = "util/panic_hook" }
parking_lot = "0.11.0"
primitives = { git = "https://github.com/CodeChain-io/rust-codechain-primitives.git", version = "0.5", tag = "v0.5.1" }
rpassword = "2.0.0"
rustc-serialize = "0.3"
serde = "1.0"
serde_cbor = "0.11.1"
serde_derive = "1.0"
serde_json = "1.0"
staking = { path = "basic_module/staking" }
tokio-core = "0.1.17"
toml = "0.4"
cidr = "0.0.4"
codechain-timestamp = {path = "timestamp"}
remote-trait-object = "0.4.0"
foundry-process-sandbox = { version = "0.2.1", git = "https://github.com/CodeChain-io/foundry-sandbox.git", tag = "v0.2.1" }
foundry-module-rt = { version = "0.2.2", git = "https://github.com/CodeChain-io/module-rt.git", tag = "v0.2.2" }
rand = { version = "0.7.3" }
ccrypto = { package = "codechain-crypto", git = "https://github.com/CodeChain-io/rust-codechain-crypto.git", version = "0.3", tag = "v0.3.0" }
hex = "0.4.2"
foundry-graphql = { path = "./graphql"}
tokio = {version = "0.2.21", features = ["rt-util"]}
awc = {version = "2.0.0"}

[build-dependencies]
vergen = "3"

[[bin]]
path = "foundry/main.rs"
name = "foundry"

[profile.release]
lto = true

[workspace]
members = [
    "core",
    "discovery",
    "json",
    "key",
    "keystore",
    "network",
    "rpc",
    "informer",
    "informer_courier",
    "sync",
    "types",
    "coordinator",
    "basic_module/account",
    "basic_module/staking",
    "module",
    "module-macros",
    "timestamp",
    "graphql"
]
