[package]
name = "codechain-basesandbox"
version = "0.1.0"
authors = ["CodeChain Team <hi@codechain.io>"]
edition = "2018"

[dependencies]
primitives = { git = "https://github.com/CodeChain-io/rust-codechain-primitives.git", version = "0.4" }
ccrypto = { package = "codechain-crypto", git = "https://github.com/CodeChain-io/rust-codechain-crypto.git", version = "0.2" }
thiserror = "1.0.11"
linkme = "0.1.6"
crossbeam-channel = "0.4.0"
once_cell = "1.3.1"
codechain-module = { path = "../module" }
nix = "0.17.0"
syn = { version = "1.0", features = ["full", "extra-traits", "visit", "fold"] }
proc-macro2 = "1.0"
proc-macro-crate = "0.1.4"
