[package]
name = "coordinator"
version = "0.1.0"
authors = ["CodeChain Team <hi@codechain.io>"]
edition = "2018"

[dependencies]
ctypes = { package = "codechain-types", path = "../types" }
ckey = { package = "codechain-key", path = "../key" }
cmodule = { package = "codechain-module", path = "../module" }
ccrypto = { package = "codechain-crypto", git = "https://github.com/CodeChain-io/rust-codechain-crypto.git", version = "0.2" }
primitives = { git = "https://github.com/CodeChain-io/rust-codechain-primitives.git", version = "0.4" }
rlp = { git = "https://github.com/CodeChain-io/rlp.git", version = "0.4" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
parking_lot = "0.11.0"
rustc-hex = "1"
regex = "1"
once_cell = "1"
linkme = "0.2.2"
thiserror = "1"
handlebars = "3.2"
anyhow = "1"
remote-trait-object = { version = "0.2.0" }
serde_cbor = "0.11.1"

[dev-dependencies]
unindent = "0.1.6"