[package]
name = "coordinator"
version = "0.1.0"
authors = ["CodeChain Team <hi@codechain.io>"]
edition = "2018"

[dependencies]
ccrypto = { package = "codechain-crypto", git = "https://github.com/CodeChain-io/rust-codechain-crypto.git", version = "0.3", tag = "v0.3.0" }
ckey = { package = "codechain-key", path = "../key" }
cmodule = { package = "codechain-module", path = "../module" }
codechain-logger = { path = "../util/logger" }
ctypes = { package = "codechain-types", path = "../types" }
remote-trait-object = "0.4.0"
foundry-process-sandbox = { version = "0.2.1", git = "https://github.com/CodeChain-io/foundry-sandbox.git", tag = "v0.2.1" }
foundry-module-rt = { version = "0.2.2", git = "https://github.com/CodeChain-io/module-rt.git", tag = "v0.2.2" }
primitives = { git = "https://github.com/CodeChain-io/rust-codechain-primitives.git", version = "0.5", tag = "v0.5.1" }
rlp = { git = "https://github.com/CodeChain-io/rlp.git", version = "0.5", tag = "v0.5.0"}
parking_lot = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
toml = "0.4"
erased-serde = "0.3"
rustc-hex = "2"
regex = "1"
once_cell = "1"
linkme = "0.2.2"
log = "0.4.6"
thiserror = "1"
handlebars = "3.3"
anyhow = "1"
serde_cbor = "0.11.1"
intertrait = "0.2.0"

[dev-dependencies]
unindent = "0.1.6"
