[package]
name = "codechain-core"
version = "0.1.0"
authors = ["CodeChain Team <hi@codechain.io>"]
edition = "2018"

[dependencies]
coordinator = { path = "../coordinator" }
ccrypto = { package = "codechain-crypto", git = "https://github.com/CodeChain-io/rust-codechain-crypto.git", version = "0.2" }
cdb = { package = "codechain-db", git = "https://github.com/CodeChain-io/rust-codechain-db.git", version = "0.2" }
cio = { package = "codechain-io", path = "../util/io" }
cjson = { package = "codechain-json", path = "../json" }
ckey = { package = "codechain-key", path = "../key" }
ckeystore = { package = "codechain-keystore", path="../keystore" }
codechain-logger = { path = "../util/logger" }
cnetwork = { package = "codechain-network", path = "../network" }
cstate = { package = "codechain-state", path = "../state" }
ctimer = { package = "codechain-timer", path = "../util/timer" }
ctypes = { package = "codechain-types", path = "../types" }
crossbeam-channel = "0.3"
hyper = { git = "https://github.com/paritytech/hyper", default-features = false }
kvdb = "0.1"
kvdb-rocksdb = "0.1"
kvdb-memorydb = "0.1"
linked-hash-map = "0.5"
log = "0.4.6"
lru-cache = "0.1.2"
merkle-trie = { git = "https://github.com/CodeChain-io/rust-merkle-trie.git", version = "0.4" }
num-rational = "0.2.1"
parking_lot = "0.6.0"
primitives = { git = "https://github.com/CodeChain-io/rust-codechain-primitives.git", version = "0.4" }
rand = "0.6.1"
rlp = { git = "https://github.com/CodeChain-io/rlp.git", version = "0.4" }
rlp_compress = { git = "https://github.com/CodeChain-io/rlp.git", version = "0.2" }
rlp_derive = { git = "https://github.com/CodeChain-io/rlp.git", version = "0.2" }
snap = "0.2"
table = { path = "../util/table" }

[dev-dependencies]
rand_xorshift = "0.1.0"

[features]
nightly = []
