[package]
name = "codechain-discovery"
version = "0.1.0"
authors = ["CodeChain Team <hi@codechain.io>"]
edition = "2018"

[dependencies]
ccrypto = { package = "codechain-crypto", git = "https://github.com/CodeChain-io/rust-codechain-crypto.git", version = "0.2" }
codechain-logger = { path = "../util/logger" }
cnetwork = { package = "codechain-network", path = "../network" }
ctimer = { package = "codechain-timer", path = "../util/timer" }
log = "0.4.6"
never-type = "0.1.0"
parking_lot = "0.6.0"
primitives = { git = "https://github.com/Byeongjee/rust-codechain-primitives.git", branch = "master"  }
rand = "0.6.1"
rlp = { git = "https://github.com/Byeongjee/rlp.git", branch = "master" }
time = "0.1"

[dev-dependencies]
lazy_static = "1.2"
