[package]
name = "codechain-discovery"
version = "0.1.0"
authors = ["CodeChain Team <hi@codechain.io>"]
edition = "2018"

[dependencies]
ccrypto = { package = "codechain-crypto", git = "https://github.com/CodeChain-io/rust-codechain-crypto.git", version = "0.3", tag = "v0.3.0" }
codechain-logger = { path = "../util/logger" }
cnetwork = { package = "codechain-network", path = "../network" }
ctimer = { package = "codechain-timer", path = "../util/timer" }
log = "0.4.6"
never-type = "0.1.0"
parking_lot = "0.11.0"
primitives = { git = "https://github.com/CodeChain-io/rust-codechain-primitives.git", version = "0.5", tag = "v0.5.1" }
rand = "0.6.1"
rlp = { git = "https://github.com/CodeChain-io/rlp.git", version = "0.5", tag = "v0.5.0"}
time = "0.1"

[dev-dependencies]
lazy_static = "1.2"
