[package]
name = "fml-tests"
version = "0.1.0"
authors = ["CodeChain Team <hi@codechain.io>"]
edition = "2018"

[features]
default = ["codechain-fml/default"]
single_process = ["codechain-fml/single_process"]

[dependencies]
codechain-basesandbox = { path = "../basesandbox" }
codechain-fml = { path = "../fml"}
fml-macro = { path = "../fml/macro" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11.1"
serde_derive = "1.0"
intertrait = "0.2.0"
linkme = "0.2.1"
rand = "0.7.3"
once_cell = "1.3.1"
