[package]
name = "foundry-graphql-types"
version = "0.1.0"
authors = ["CodeChain Team <hi@codechain.io>"]
edition = "2018"

[dependencies]
ccrypto = { package = "codechain-crypto", git = "https://github.com/CodeChain-io/rust-codechain-crypto.git", version = "0.3", tag = "v0.3.0" }
ckey = {package = "codechain-key", path = "../key" }
ctypes = { package = "codechain-types", path = "../types" }
primitives = { git = "https://github.com/CodeChain-io/rust-codechain-primitives.git", version = "0.5", tag = "v0.5.1" }
serde = { version = "1.0.111", features = ["derive"] }
serde_cbor = "0.11.1"
serde_json = "1.0"
remote-trait-object = "0.4.0"
async-graphql = "2.0.5"
hex = "0.4.2"
