[package]
name = "foundry-graphql"
version = "0.1.0"
authors = ["CodeChain Team <hi@codechain.io>"]
edition = "2018"

[dependencies]
remote-trait-object = "0.4"
actix-web = "3.0"
actix-service = "1.0"
actix-rt = "1.1.1"
actix-http = "2.0"
async-graphql = "1.18"
futures = "0.3.5"
tokio = "0.2.20"
serde_json = "1.0.53"
serde_derive = "1.0.110"
serde = "1.0.110"
coordinator = {path = "../coordinator"}
crossbeam = "0.7"
ctypes = { package = "codechain-types", path = "../types" }

[dev-dependencies]
