[package]
name = "codechain-informer"
version = "0.1.0"
authors = ["MSNTCS <najafi@codechain.io>"]
edition = "2018"

[lib]

[dependencies]
cidr = "0.0.4"
codechain-logger = { path = "../util/logger" }
kvdb = "0.1"
lazy_static = "1.2"
crossbeam-channel = "0.4"
parking_lot = "0.11.0"
rlp = { git = "https://github.com/CodeChain-io/rlp.git", version = "0.5", tag = "v0.5.0"}
cinfo_courier = { package = "codechain_informer_courier", path = "../informer_courier" }
ccore = { package = "codechain-core", path = "../core" }
ctypes = { package = "codechain-types", path = "../types" }
crpc = { package = "codechain-rpc", path = "../rpc" }
tokio = { version = "0.2.13", features = ["full"] }
serde = "1.0"
log = "0.4.6"
serde_json = "1.0"
serde_derive = "1.0"
rand = "0.6.1"
rustc-hex = "1.0"
rustc-serialize = "0.3"
time = "0.1"
jsonrpc-core = { git = "https://github.com/paritytech/jsonrpc.git", tag = "v14.0.3" }
jsonrpc-derive = { git = "https://github.com/paritytech/jsonrpc.git", tag = "v14.0.3" }
jsonrpc-http-server = { git = "https://github.com/paritytech/jsonrpc.git", tag = "v14.0.3" }
jsonrpc-ipc-server = { git = "https://github.com/paritytech/jsonrpc.git", tag = "v14.0.3" }
jsonrpc-ws-server = { git = "https://github.com/paritytech/jsonrpc.git", tag = "v14.0.3" }
jsonrpc-pubsub = { git = "https://github.com/paritytech/jsonrpc.git", tag = "v14.0.3" }

