[package]
name = "foundry-integration-test"
version = "0.1.0"
authors = ["CodeChain Team <hi@codechain.io>"]
edition = "2018"

[dependencies]
awc = "2.0.0"
actix-rt = "1.1.1"
futures = "0.3.5"
tokio = {version = "0.2.21", features = ["sync", "time", "rt-threaded", "macros"]}
serde_json = "1.0.53"
serde_cbor = "0.11.1"
serde_derive = "1.0.110"
serde = "1.0.110"
coordinator = {path = "../coordinator"}
ctypes = { package = "codechain-types", path = "../types" }
hex = "0.4.2"
ckey = {package = "codechain-key", path = "../key" }
ccrypto = { package = "codechain-crypto", git = "https://github.com/CodeChain-io/rust-codechain-crypto.git", version = "0.3", tag = "v0.3.0" }

[features]
integration-test = []