[package]
name = "codechain-json"
version = "0.1.0"
authors = ["CodeChain Team <hi@codechain.io>"]
edition = "2018"

[dependencies]
ckey = { package = "codechain-key", path = "../key" }
primitives = { git = "https://github.com/Byeongjee/rust-codechain-primitives.git", branch = "master"  }
rustc-hex = "1.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
