[package]
name = "codechain-key"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com>", "CodeChain Team <hi@codechain.io>"]
edition = "2018"

[dependencies]
rand = "0.6.1"
rustc-hex = "1.0"
rustc-serialize = "0.3"
lazy_static = "1.2"
base64 = "0.12"
codechain-crypto = { git = "https://github.com/CodeChain-io/rust-codechain-crypto.git", version = "0.2" }
never-type = "0.1.0"
parking_lot = "0.11.0"
primitives = { git = "https://github.com/CodeChain-io/rust-codechain-primitives.git", version = "0.4" }
rand_xorshift = "0.1.0"
rlp = { git = "https://github.com/CodeChain-io/rlp.git", version = "0.4" }
sodiumoxide = "0.2.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
