[package]
name = "codechain-module"
version = "0.1.0"
authors = ["CodeChain Team <hi@codechain.io>"]
edition = "2018"

[dependencies]
primitives = { git = "https://github.com/CodeChain-io/rust-codechain-primitives.git", version = "0.4" }
thiserror = "1.0.15"
linkme = "0.2.1"
once_cell = "1.3.1"
serde = "1.0.105"
intertrait = "0.2.0"
