[package]
name = "codechain-module"
version = "0.1.0"
authors = ["CodeChain Team <hi@codechain.io>"]
edition = "2018"

[dependencies]
primitives = { git = "https://github.com/CodeChain-io/rust-codechain-primitives.git", version = "0.4" }
thiserror = "1.0.15"
linkme = "0.2.1"
once_cell = "1.3.1"
serde = { version = "1.0.105", features = ["derive"] }
serde_cbor = "0.11.1"
erased-serde = "0.3.11"
intertrait = "0.2.0"
remote-trait-object = { version = "0.1.4", git = "https://github.com/CodeChain-io/remote-trait-object.git" }
remote-trait-object-macro = { version = "0.1.4", git = "https://github.com/CodeChain-io/remote-trait-object.git" }
foundry-process-sandbox = { git = "https://github.com/CodeChain-io/foundry-sandbox.git"}
foundry-module-rt = { version = "0.1.1", git = "https://github.com/CodeChain-io/module-rt.git" }
parking_lot = "0.11.0"
crossbeam = "0.7"
