[package]
name = "codechain-network"
version = "0.1.0"
authors = ["CodeChain Team <hi@codechain.io>"]
edition = "2018"

[dependencies]
ccrypto = { package = "codechain-crypto", git = "https://github.com/CodeChain-io/rust-codechain-crypto.git", version = "0.3", tag = "v0.3.0" }
cio = { package = "codechain-io", path = "../util/io" }
ckey = { package = "codechain-key", path = "../key" }
codechain-logger = { path = "../util/logger" }
cinfo_courier = { package = "codechain_informer_courier", path = "../informer_courier" }
ctimer = { package = "codechain-timer", path = "../util/timer" }
crossbeam-channel = "0.3"
finally-block = "0.1"
primitives = { git = "https://github.com/CodeChain-io/rust-codechain-primitives.git", version = "0.5", tag = "v0.5.1" }
log = "0.4.6"
kvdb="0.1"
mio = "0.6.16"
never-type = "0.1.0"
parking_lot = "0.11.0"
rand = "0.6.1"
rlp = { git = "https://github.com/CodeChain-io/rlp.git", version = "0.5", tag = "v0.5.0" }
rlp_derive = { git = "https://github.com/CodeChain-io/rlp.git", version = "0.5", tag = "v0.5.0" }
table = { path = "../util/table" }
time = "0.1"
token-generator = "0.1.0"
cidr = "0.0.4"
