[package]
name = "codechain-sync"
version = "0.1.0"
authors = ["CodeChain Team <hi@codechain.io>"]
edition = "2018"

[lib]

[dependencies]
codechain-core = { path = "../core" }
codechain-crypto = { git = "https://github.com/CodeChain-io/rust-codechain-crypto.git", version = "0.3", tag = "v0.3.0" }
codechain-db = { git = "https://github.com/CodeChain-io/rust-codechain-db.git", version = "0.2", tag = "v0.2.0" }
coordinator = { path = "../coordinator" }
codechain-key = { path = "../key" }
codechain-logger = { path = "../util/logger" }
codechain-network = { path = "../network" }
codechain-state = { path = "../state" }
codechain-timer = { path = "../util/timer" }
codechain-types = { path = "../types" }
kvdb = "0.1"
log = "0.4.6"
merkle-trie = { git = "https://github.com/CodeChain-io/rust-merkle-trie.git", version = "0.4.1", tag = "v0.4.1" }
never-type = "0.1.0"
primitives = { git = "https://github.com/CodeChain-io/rust-codechain-primitives.git", version = "0.5", tag = "v0.5.1" }
rand = "0.6.1"
rlp = { git = "https://github.com/CodeChain-io/rlp.git", version = "0.5", tag = "v0.5.0"}
snap = "0.2"
token-generator = "0.1.0"
