[package]
name = "codechain-timestamp"
version = "0.1.0"
authors = ["CodeChain Team <hi@codechain.io>"]
edition = "2018"

[dependencies]
ccrypto = { package = "codechain-crypto", git = "https://github.com/CodeChain-io/rust-codechain-crypto.git", version = "0.3", tag = "v0.3.0" }
ckey = {package = "codechain-key", path = "../key" }
ctypes = { package = "codechain-types", path = "../types" }
parking_lot = "0.11.0"
primitives = { git = "https://github.com/CodeChain-io/rust-codechain-primitives.git", version = "0.5", tag = "v0.5.1" }
serde = { version = "1.0.111", features = ["derive"] }
serde_cbor = "0.11.1"
serde_json = "1.0"
coordinator = {path = "../coordinator"}
remote-trait-object = "0.4.0"
foundry-process-sandbox = { version = "0.2.1", git = "https://github.com/CodeChain-io/foundry-sandbox.git", tag = "v0.2.1" }
foundry-module-rt = { version = "0.2.2", git = "https://github.com/CodeChain-io/module-rt.git", tag = "v0.2.2" }
linkme = "0.2.1"
async-graphql = "2.0.5"
tokio = {version = "0.2.21", features = ["sync", "time", "rt-threaded", "macros", "uds"]}
hex = "0.4.2"

[dev-dependencies]
codechain-module = {path = "../module"}
erased-serde = "0.3.11"
rand = { version = "0.7.3" }

[features]
multi-process = []

[[bin]]
path = "./src/bin/account.rs"
name = "a010000000012345678901234567890123456789012345678901234567890123"

[[bin]]
path = "./src/bin/staking.rs"
name = "a020000000012345678901234567890123456789012345678901234567890123"

[[bin]]
path = "./src/bin/token.rs"
name = "a040000000012345678901234567890123456789012345678901234567890123"

[[bin]]
path = "./src/bin/sorting.rs"
name = "a050000000012345678901234567890123456789012345678901234567890123"

[[bin]]
path = "./src/bin/stamp.rs"
name = "a030000000012345678901234567890123456789012345678901234567890123"