[package]
name = "codechain-types"
version = "0.1.0"
authors = ["CodeChain Team <hi@codechain.io>"]
edition = "2018"

[dependencies]
ccrypto = { package = "codechain-crypto", git = "https://github.com/CodeChain-io/rust-codechain-crypto.git", version = "0.2" }
cjson = { package = "codechain-json", path = "../json" }
ckey = { package = "codechain-key", path = "../key" }
primitives = { git = "https://github.com/Byeongjee/rust-codechain-primitives.git", branch = "master"  }
rand = "0.6.1"
rlp = { git = "https://github.com/Byeongjee/rlp.git", branch = "master" }
rlp_derive = { git = "https://github.com/CodeChain-io/rlp.git", version = "0.2" }
serde = "1.0"
serde_derive = "1.0"

[dev-dependencies]
serde_json = "1.0"
