[package]
name = "codechain-vm"
version = "0.1.0"
authors = ["CodeChain Team <codechain@kodebox.io>"]
edition = "2018"

[lib]

[dependencies]
ccrypto = { package = "codechain-crypto", git = "https://github.com/CodeChain-io/rust-codechain-crypto.git", version = "0.2" }
ckey = { package = "codechain-key", path = "../key" }
ctypes = { package = "codechain-types", path = "../types" }
primitives = { git = "https://github.com/Byeongjee/rust-codechain-primitives.git", branch = "master"  }
rlp = { git = "https://github.com/Byeongjee/rlp.git", branch = "master" }

[dev-dependencies]
secp256k1 = { git = "https://github.com/CodeChain-io/rust-secp256k1.git", version = "0.6" }
