[package]
name = "codechain-voting"
version = "0.1.0"
authors = ["CodeChain Team <hi@codechain.io>"]
edition = "2018"

[dependencies]
ccrypto = { package = "codechain-crypto", git = "https://github.com/CodeChain-io/rust-codechain-crypto.git", version = "0.2" }
ckey = {package = "codechain-key", path = "../key"}
coordinator = { path = "../coordinator" }
foundry-module-rt = { version = "0.1.1", git = "https://github.com/CodeChain-io/module-rt.git", tag = "v0.1.1"}
linkme = "0.2.1"
parking_lot = "0.11.0"
primitives = { git = "https://github.com/CodeChain-io/rust-codechain-primitives.git", version = "0.4" }
rand = "0.6.1"
remote-trait-object = { version = "=0.3.0" }
serde_cbor = "0.11.1"
serde = { version = "1.0.111", features = ["derive"] }
