[package]
name = "codechain-voting"
version = "0.1.0"
authors = ["CodeChain Team <hi@codechain.io>"]
edition = "2018"

[dependencies]
ccrypto = { package = "codechain-crypto", git = "https://github.com/CodeChain-io/rust-codechain-crypto.git", version = "0.3" }
ckey = {package = "codechain-key", path = "../key"}
coordinator = { path = "../coordinator" }
foundry-module-rt = { version = "0.2.0", git = "https://github.com/CodeChain-io/module-rt.git", tag = "v0.2.0" }
linkme = "0.2.1"
parking_lot = "0.11.0"
primitives = { git = "https://github.com/CodeChain-io/rust-codechain-primitives.git", version = "0.5" }
remote-trait-object = { version = "=0.4.0" }
serde_cbor = "0.11.1"
serde = { version = "1.0.111", features = ["derive"] }

[dev-dependencies]
codechain-module = {path = "../module"}
erased-serde = "0.3.11"
ctypes = { package = "codechain-types", path = "../types" }
foundry-process-sandbox = { version = "0.2.0", git = "https://github.com/CodeChain-io/foundry-sandbox.git", tag = "v0.2.0" }
