[package]
name = "module_account"
version = "0.1.0"
authors = ["CodeChain Team <hi@codechain.io>"]
edition = "2018"

[dependencies]
ccrypto = { package = "codechain-crypto", git = "https://github.com/CodeChain-io/rust-codechain-crypto.git", version = "0.2" }
ckey = {package = "codechain-key", path = "../../key" }
primitives = { git = "https://github.com/CodeChain-io/rust-codechain-primitives.git", version = "0.4" }
serde = "1.0"
serde_cbor = "0.11.1"
serde_derive = "1.0"

[dev-dependencies]
