[package]
name = "module_account"
version = "0.1.0"
authors = ["CodeChain Team <hi@codechain.io>"]
edition = "2018"

[dependencies]
ccrypto = { package = "codechain-crypto", git = "https://github.com/CodeChain-io/rust-codechain-crypto.git", version = "0.3", tag = "v0.3.0" }
ckey = {package = "codechain-key", path = "../../key" }
coordinator = {package = "coordinator", path = "../../coordinator" }
lazy_static = "1.2"
parking_lot = "0.11.0"
primitives = { git = "https://github.com/CodeChain-io/rust-codechain-primitives.git", version = "0.5", tag = "v0.5.1" }
serde = "1.0"
serde_cbor = "0.11.1"
serde_derive = "1.0"

[dev-dependencies]
